# game-of-life

./: Cargo.toml
app/: Cargo.toml
app/src/: app.rs  main.rs
gol/: Cargo.toml
gol/src/: basic_state.rs  hashlife.rs  lib.rs  universe.rs
hashlife/: Cargo.toml
hashlife/src/: basic_state.rs  eq.rs  lib.rs  p3.rs  render.rs  tests.rs  universe.rs
src/: basic_state.rs  hashlife.rs  main.rs  p3.rs  state.rs
