[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
gol = { path = "../gol" }
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
env_logger = "0.11.8"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2